2002-02-05  Abel Cheung  <maddog@linux.org.hk>

	* configure.in (ALL_LINGUAS): zh_CN.GB2312 -> zh_CN

2002-02-04  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/greeter.c:
	* gui/greeter/greeter_item_pam.[ch]:
	Implement the messages better.

	* gui/greeter/themes/circles/circles.xml:
	Try out the new messages

2002-02-04  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/greeter_system.c:
	Add system_button which is a dialog with all
	shutdown options in it.
	
2002-02-04  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/Makefile.am:
	Add greeter_system.[ch].

	* gui/greeter/greeter.c (greeter_setup_items):
	Call greeter_item_system_setup().
	
	* gui/greeter/greeter_system.[ch]:
	Add some system-menu item handling.

	* gui/greeter/themes/circles/circles.xml:
	Pack the bottom buttons in a box.

2002-02-04  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/greeter.c:
	Set the locale.

	* gui/greeter/greeter_parser.c:
	Fix translation of strings.
	
	* gui/greeter/themes/circles/circles.xml:
	Fix test translation.

2002-02-04  Karsten Weiss  <knweiss@gmx.de>

	* gui/gdmconfig-strings.c: Fixed a typo.

        * config/gettextfoo.h: Fixed a typo.
        * daemon/verify-pam.c: Ditto.
        * gui/gdmconfig-strings.c: Ditto.

2002-01-30  Alex Larsson  <alexl@redhat.com>

	* configure.in:
	Add new makefiles to output.

	* gui/greeter/Makefile.am:
	Add themes subdir.
	Add config file and theme dir defines.
	Add greeter_configuration.h

	* gui/greeter/greeter.c:
	Parse config options.
	Handle theme data search path.

	* gui/greeter/greeter_parser.[ch]:
	Handle theme data search path.

	* gui/themes/*:
	* gui/themes/circles/*:
	Checking in theme data.
	
2002-01-29  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/greeter_canvas_item.c:
	Remove old anchor leftovers.
	Set font_desc instead of font for text items.
	
	* gui/greeter/greeter_geometry.c:
	Set font_desc instead of font for text items.

2002-01-29  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/Makefile.am: