@@ -1,3 +1,8 @@
+2002-02-05  Karsten Weiss  <knweiss@gmx.de>
+
+	* daemon/gdm.c, daemon/slave.c, gui/gdmconfig.c:
+	Uppercase spelling for "XDMCP" in user-visible strings.
+
 2002-02-05  Abel Cheung  <maddog@linux.org.hk>
 
 	* configure.in (ALL_LINGUAS): zh_CN.GB2312 -> zh_CN
